Добавить dto, tests